# wdns

./: .gitignore  .travis.yml  COPYRIGHT  ChangeLog  Makefile.am  README.md  configure.ac  dns-parameters  wdns.spec
debian/: changelog  control  copyright  libwdns-dev.install  libwdns0.symbols  libwdns1.docs  libwdns1.symbols  not-installed  rules
examples/: .gitignore  private.h  wdns-dump-file.c  wdns-dump-pcap.c  wdns-hex-driver.c  wdns-mk-bitmap.c  wdns-print-version.c  wdns-test-deserialize-rrset.c  wdns-test-downcase-rrset.c  wdns-test-print-message.c  wdns-test-serialize-rrset.c
libmy/: b32_decode.c  b32_encode.c  b64_encode.c  fast_inet_ntop.c  fast_inet_ntop.h  my_format.c  my_format.h  my_num_to_str.c  my_num_to_str.h  spooldir.c  ubuf.h  zonefile.c
m4/: gcov.m4
pywdns/: gen_pywdns_constants  wdns.pyx
t/: test-common.c  test-common.h  test-fast_inet_ntop.c  test-name_to_str.c  test-rdata.c  test-rdata_to_str.c  test-str_to_name.c  test-str_to_rcode.c  test-str_to_rdata.c  test-str_to_rrtype.c
wdns/: buf.h  clear.c  compare_rr_rrset.c  copy_uname.c  count_labels.c  deserialize_rrset.c  domain_to_str.c  downcase_name.c  downcase_rdata.c  downcase_rrset.c  edns_options.c  file_load_names.c  gen_rcode_to_str  gen_rrclass_to_str  gen_rrtype_to_str  insert_rr_rrset_array.c  is_subdomain.c  left_chop.c  len_uname.c  libwdns.pc.in  libwdns.sym  message_to_str.c  msg.h  opcode_to_str.c  parse_edns.c  parse_header.c  parse_message.c  parse_message_rr.c  parse_rdata.c  print_message.c  print_rr.c  print_rrset.c  print_rrset_array.c  rcode_to_str.c  rdata_to_str.c  rdata_to_ubuf.c  rdata_to_ustr.c  record_descr.c  record_descr.h  res_to_str.c  (+21 more)
wdns/msg/: Makefile.am  b64_encode.c  len_uname.c  parse_message.c  parse_rdata.c  private.h  rdata_to_str.c  rdata_to_ustr.c  record_descr.c  record_descr.h
